--- a/styles.css
+++ b/styles.css
@@ -21,9 +21,9 @@ h1{
   
 }
 .top {
-  margin-top: 20px;
+  margin: 0 auto;
   background-color: white;
-  padding: 30px 20px 30px 20px;
+  padding: 2.5em;
   grid-column-start: 1;
   grid-column-end: 3;
   border-radius: 10px 10px 0px 0px;
